# P9-RobuROC4

./: .gitignore  README.md  controller.py  gamepad.py  main.py  minimal_example  minimal_example.py
Minimally working example/: AMC.eds  visualizer.py
install/: local_setup.sh  setup.sh
log/: latest_build
src/Gamepad/: package.xml  setup.cfg  setup.py
src/Gamepad/Gamepad/: gamepad.py
src/RobuROC_sim/src/: CMakeLists.txt  README.md  package.xml  setup.conf  setup.py
src/canopen_interfaces/: CMakeLists.txt
src/canopen_interfaces/msg/: CANSubscription.msg  CANWrite.msg
src/canopen_interfaces/srv/: CANConnection.srv  CANPeriodicTask.srv  CANRead.srv
src/imu_package/: package.xml  setup.py
src/imu_publisher/: package.xml  setup.py
src/imu_publisher/imu_publisher/: imu_publisher_node.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/package1/: package.xml
src/robotController/: package.xml  setup.py
src/roburoc_canopen/: CMakeLists.txt  package.xml
src/roburoc_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/roburoc_controller/msg/: CANPeriodicTask.msg  CANSubscribe.msg  CANSubscription.msg  CANWrite.msg
src/roburoc_controller/roburoc_controller/: gamepad.py  robuROC_CTRL.py
src/roburoc_controller/roburoc_controller/utils/: CTW.py  robuROC_CANopen.py
src/roburoc_controller/scripts/: gamepad.py  robuROC_CANOpen.py  robuROC_CTRL.py
src/roburoc_controller/scripts/utils/: gamepad_buttons.py
src/roburoc_controller/srv/: CANRead.srv
src/roburoc_gamepad/: CMakeLists.txt  package.xml
(+224 files in other folders)
